 * Feature: Add extra thickness to the color sampling ring in the area where the colors meet to give better visibility of the comparison. Thanks tiar for suggesting.

2025-10-18 Version 2.3.0-beta.4
 * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
 * Fix: Make the preferences menu item on macOS open the preferences again.
 * Fix: Make mouse wheel to adjust brush sizes not skip over small values on wheels that make big steps. Thanks Meiren for reporting.
 * Fix: Make zoom tool detect clicks properly, rather than detecting tiny motions as a rectangle to zoom into. Thanks Scruff for reporting.
 * Fix: Make freehand tool icon appear again if starting up with the eraser selected. Thanks Meiren for reporting.
 * Fix: Make software renderers handle canvas sizes with dimensions beyond 32767 pixels properly. Thanks Ben for reporting.
 * Fix: Open ORA files with width or height greater than 32767 pixels. Thanks Nimono for reporting.
 * Feature: Make true /roll messages in chat have a blue tint to make cheating more difficult. They're also translatable now, rather than always being in English. Thanks KosmonautKat, lambda20xx and Potete for suggesting.
 * Feature: Allow "blocking" of layers. It works like censoring a layer, but the censor is only visible to you. It lets you hide stuff you don't want to see, but still be aware that it's there so you don't draw over other people's art.
 * Fix: Make layer clipping onto pass-through groups work the same as it does in other programs (that is, make it not clip.)
 * Feature: Anti-overflow fill for brushes. Thanks Ausjamcian, Axocrat and Null for suggesting.
 * Feature: Exit Drawpile when the last window is closed on macOS, like on all other systems. You can reenable this behavior in the user interface preferences if you want it back.
 * Fix: Make clicking with touchpad not trigger touch color picker.